adapting foreign memory api changes needed for the jdk 20 -> jdk 21 transition